--- a/note1.ipynb
+++ b/note1.ipynb
@@ -1822,7 +1822,102 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "def transcribe_audio(wav_file_path):\n",
+    "    device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
+    "    torch_dtype = torch.float16 if torch.cuda.is_available() else torch.float32\n",
+    "\n",
+    "    model_id = \"openai/whisper-tiny\"\n",
+    "\n",
+    "    model = AutoModelForSpeechSeq2Seq.from_pretrained(\n",
+    "        model_id, torch_dtype=torch_dtype, low_cpu_mem_usage=True, use_safetensors=True\n",
+    "    )\n",
+    "    model.to(device)\n",
+    "\n",
+    "    processor = AutoProcessor.from_pretrained(model_id)\n",
+    "\n",
+    "    pipe = pipeline(\n",
+    "        \"automatic-speech-recognition\",\n",
+    "        model=model,\n",
+    "        tokenizer=processor.tokenizer,\n",
+    "        feature_extractor=processor.feature_extractor,\n",
+    "        max_new_tokens=128,\n",
+    "        chunk_length_s=30,\n",
+    "        batch_size=16,\n",
+    "        return_timestamps=True,\n",
+    "        torch_dtype=torch_dtype,\n",
+    "        device=device,\n",
+    "    )\n",
+    "\n",
+    "    result = pipe(wav_file_path, return_timestamps=True)\n",
+    "    return result[\"chunks\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def adjust_timestamps(transcription_data):\n",
+    "    new_chunks = []\n",
+    "    \n",
+    "    for entry in transcription_data:\n",
+    "        start_time, end_time = entry['timestamp']\n",
+    "        text = entry['text']\n",
+    "\n",
+    "        # Split text based on punctuation marks\n",
+    "        sentences = re.split(r'([.!?])', text)\n",
+    "        \n",
+    "        # Combine sentences and punctuation\n",
+    "        sentences = [\"\".join(i) for i in zip(sentences[0::2], sentences[1::2])]\n",
+    "        \n",
+    "        if sentences and sentences[-1][-1] not in '.!?':\n",
+    "            sentences[-1] += \".\"\n",
+    "\n",
+    "        # Calculate the average duration of each sentence\n",
+    "        sentence_count = len(sentences)\n",
+    "        duration = (end_time - start_time) / sentence_count if sentence_count > 0 else 0\n",
+    "        \n",
+    "        for i, sentence in enumerate(sentences):\n",
+    "            new_start_time = start_time + i * duration\n",
+    "            new_end_time = start_time + (i + 1) * duration\n",
+    "            new_chunks.append({\n",
+    "                'timestamp': (new_start_time, new_end_time),\n",
+    "                'text': sentence.strip()\n",
+    "            })\n",
+    "    \n",
+    "    return new_chunks\n",
+    "\n",
+    "# Example usage within the main function\n",
+    "def main():\n",
+    "    st.title(\"YouTube Transcription App\")\n",
+    "\n",
+    "    youtube_url = st.text_input(\"Enter a YouTube video URL\")\n",
+    "\n",
+    "    if youtube_url:\n",
+    "        try:\n",
+    "            video_id = get_video_id_from_url(youtube_url)\n",
+    "            wav_file_path = download_audio(youtube_url)\n",
+    "            transcription_data = transcribe_audio(wav_file_path)\n",
+    "\n",
+    "            adjusted_transcription_data = adjust_timestamps(transcription_data)\n",
+    "\n",
+    "            st.subheader(\"Transcription\")\n",
+    "            for entry in adjusted_transcription_data:\n",
+    "                start_time, end_time = entry['timestamp']\n",
+    "                text = entry['text']\n",
+    "                st.write(f\"Timestamp: {start_time:.2f} - {end_time:.2f}\")\n",
+    "                st.write(f\"Text: {text}\")\n",
+    "        except Exception as e:\n",
+    "            st.error(f\"An error occurred: {e}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
   }
  ],
  "metadata": {
